--- a/Tugas CSS/ProfileAria.html
+++ b/Tugas CSS/ProfileAria.html
@@ -5,13 +5,18 @@
     <link rel="icon" type="image/x-icon" href="gallery/5.png" />
     <style>
       body {
-        padding: 0px;
-        margin: 0px;
+        padding: 10px;
+        margin: 10px;
       }
 
       .gallery {
         padding: 10px;
         margin: 10px;
+      }
+
+      img {
+        border: 5px solid brown;
+        border-radius: 10px;
       }
     </style>
   </head>
@@ -34,9 +39,9 @@
       <center>
         <h1>Gallery</h1>
         <br />
-        <img src="gallery/1.jpg" height="267" width="200" title="Aria Rahman" border="3" />
-        <img src="gallery/3.jpg" height="267" width="200" title="Aria Rahman" border="3" />
-        <img src="gallery/4.jpg" height="267" width="200" title="Aria Rahman" border="3" />
+        <img src="gallery/1.jpg" height="267" width="200" title="Aria Rahman" />
+        <img src="gallery/3.jpg" height="267" width="200" title="Aria Rahman" />
+        <img src="gallery/4.jpg" height="267" width="200" title="Aria Rahman" />
       </center>
       <br /><br /><br /><br /><br />
     </section>
